@@ -79,7 +79,7 @@ public class DieCommand implements KibuCommand {
         int count = entities.size();
 
         if (count == 1) {
-            msg = commandService.translateText(source, "pal.cmd.die.single", styled(entities.get(0).getNameForScoreboard()).formatted(Formatting.YELLOW));
+            msg = commandService.translateText(source, "pal.cmd.die.single", styled(entities.getFirst().getNameForScoreboard()).formatted(Formatting.YELLOW));
         } else {
             msg = commandService.translateText(source, "pal.cmd.die.multiple", styled(count).formatted(Formatting.YELLOW));
         }
